--- a/visisvc.yaml
+++ b/visisvc.yaml
@@ -6,7 +6,8 @@ metadata:
     run: my-nginx
 spec:
   ports:
-  - port: 80
+  - port: 88
+    targetport: 8080
     protocol: TCP
   selector:
     run: my-nginx
