--- a/visipod.yaml
+++ b/visipod.yaml
@@ -8,4 +8,4 @@ spec:
   - image: visimihasi/lfth.final.task:v1
     name: visi-podd 
   serviceAccountName: serviceaccountapp1
-  a utomountServiceAccountToken: false
+  automountServiceAccountToken: false
